--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "portfolio-app",
+  "name": "portfolio",
   "version": "0.1.0",
-  "homepage": "https://vahablotfi.github.io/Portfolio-app",
+  "homepage": "https://vahablotfi.github.io/Portfolio",
   "private": true,
   "dependencies": {
     "@emailjs/browser": "^3.9.1",
